Fix typo in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "npm ruh build",
+    "prepublish": "npm run build",
     "build": "rm -rf ./dist && tsc",
     "buildDev": "rm -rf ./dist && tsc --sourceMap",
     "format": "fd '\\.ts$' src bin tests -x npx prettier -w",
