--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 12.x
+      - name: Use Node.js 14.x
         uses: actions/setup-node@v3
         with:
-          node-version: '12.x'
-      - run: npm ci
+          node-version: '14.x'
+      - run: npm i
       - run: npm run build
       - run: npm test
